New changes from setting up local repo